--- a/Formularios/Albumes.html
+++ b/Formularios/Albumes.html
@@ -15,13 +15,22 @@
         <li><a href="Conciertos.html">Conciertos</a></li>
         <li><a href="Albumes.html">Álbumes</a></li>
       </ul>
-    </nav>
+    </nav>''
   </header>
 <body class="contactBody">   
         <div class="wrapper">
 
         <form class="form">
-            <h1>Bandas</h1>
+            <h1>Álbumes</h1>
+            <h2>Banda:</h2>
+            <div class="opciones">
+              <select class="custom-select">    
+                <option value="opcion1">Opción 1</option>
+                <option value="opcion2">Opción 2</option>
+                <option value="opcion3">Opción 3</option>
+                <option value="opcion4">Opción 4</option>
+              </select>
+            </div>
           <input type="text" class="name entry" placeholder="Nombre de la banda"/>
           
           <input type="text" class="genre entry" placeholder="Género musical"/>
