--- a/Formularios/Generos.html
+++ b/Formularios/Generos.html
@@ -22,7 +22,7 @@
 
         <form class="form">
             <h1>Géneros</h1>
-            <h2>Nombre del género</h2>
+            <h2>Nombre del género:</h2>
             <div class="opciones">
               <select>    
                 <option value="opcion1">Opción 1</option>
