--- a/Formularios/Generos.html
+++ b/Formularios/Generos.html
@@ -21,10 +21,10 @@
         <div class="wrapper">
 
         <form class="form">
-            <h1>Géneros</h1>
+            <h1>Géneros musicales</h1>
             <h2>Nombre del género:</h2>
             <div class="opciones">
-              <select>    
+              <select class="custom-select">    
                 <option value="opcion1">Opción 1</option>
                 <option value="opcion2">Opción 2</option>
                 <option value="opcion3">Opción 3</option>
