cambio de funcionamiento

--- a/Gráficas/index.html
+++ b/Gráficas/index.html
@@ -29,7 +29,7 @@
                         <div id="albumCopiesChart"></div>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-success mt-4" id="btnGraph1" onclick="consultarCopiasVendidas()">Consultar</button>
+                        <button class="btn btn-success mt-4" id="button_1" onclick="consultarCopiasVendidas()">Consultar</button>
                     </div>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                         <div id="bandsByGenreChart"></div>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-success mt-4" id="btnGraph2" onclick="consultarBandasPorGenero()">Consultar</button>
+                        <button class="btn btn-success mt-4" id="button_2" onclick="consultarBandasPorGenero()">Consultar</button>
                     </div>
                 </div>
             </div>
@@ -54,7 +54,7 @@
                         <div id="bandsByCountryChart"></div>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-success mt-4" id="btnGraph3" onclick="consultarBandasPorPais()">Consultar</button>
+                        <button class="btn btn-success mt-4" id="button_3" onclick="consultarBandasPorPais()">Consultar</button>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                         <div id="genreCountChart"></div>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-success mt-4" id="btnGraph4" onclick="consultarCantidadGeneros()">Consultar</button>
+                        <button class="btn btn-success mt-4" id="button_4" onclick="consultarCantidadGeneros()">Consultar</button>
                     </div>
                 </div>
             </div>
@@ -79,7 +79,7 @@
                         <div id="concertsByLocationChart"></div>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-success mt-4" id="btnGraph5" onclick="consultarConciertosPorLugar()">Consultar</button>
+                        <button class="btn btn-success mt-4" id="button_5" onclick="consultarConciertosPorLugar()">Consultar</button>
                     </div>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                         <div id="albumsByDecadesChart"></div>
                     </div>
                     <div class="card-footer">
-                        <button class="btn btn-success mt-4" id="btnGraph6" onclick="consultarAlbumesPorDecada()">Consultar</button>
+                        <button class="btn btn-success mt-4" id="button_6" onclick="consultarAlbumesPorDecada()">Consultar</button>
                     </div>
                 </div>
             </div>
