--- a/Formularios/html/Bandas.html
+++ b/Formularios/html/Bandas.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bandas</title>
-  <link rel="stylesheet" media="all" href="/ProyectoFinal/Formularios/css/Bandas.css" />
+  <link rel="stylesheet" media="all" href="/Formularios/css/Bandas.css" />
 </head>
 <body>
   <header>
